@@ -131,3 +131,4 @@
 ( cvs diff -u -r 1.1.2.95 -r 1.1.2.96 src/feed.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/rssyl.c;  ) > 0.19.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/opml.c;  ) > 0.19.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.96 -r 1.1.2.97 src/feed.c;  ) > 0.19.0cvs3.patchset
+( cvs diff -u -r 1.1.2.97 -r 1.1.2.98 src/feed.c;  ) > 0.20.0cvs1.patchset
